CHATS_SIT/force-app/main/default/objects/T_INDIV_CAT_RQ__c.object
<CustomObject>
    <description>Individual is requesting care indicators.</description>
    <fields>
        <fullName>CCR_Case_Id__c</fullName>
        <formula>IDN_CASE_INDIV__r.IDN_CASE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_CAT_PROG__c</fullName>
        <description>Program Category</description>
        <label>Program Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00368</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_CHANGE_RQ_CAT__c</fullName>
        <description>Program Category Change Request</description>
        <label>Reason for Ending Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00322</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>System Determined Effective Begin Date</description>
        <label>System Determined Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Individual ID</label>
        <referenceTo>T_SBSD_CASE_INDIV__c</referenceTo>
        <relationshipLabel>Child Care Requests</relationshipLabel>
        <relationshipName>Child_Care_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Case Individual External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cde_reason_ovrd__c</fullName>
        <label>Override Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>County/Worker Error</fullName>
                </value>
                <value>
                    <fullName>Standard processing time (Delay in processing Child Care Request)</fullName>
                </value>
                <value>
                    <fullName>Care Request Received After Care Started</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OVERRIDDEN_DTE_BEGIN_EFFV__c</fullName>
        <description>Overriden Effective Begin Date</description>
        <label>Overridden Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>txt_cmt_ovrd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Child Care Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
   <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Child Care Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Care Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_End_Date_less_than_Begin_Date</fullName>
        <active>true</active>
        <description>Effective End Date must be greater than Effective Begin Date.</description>
        <errorConditionFormula>NOT(IDN_CASE_INDIV__r.IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; 
        ((ISNULL(OVERRIDDEN_DTE_BEGIN_EFFV__c) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c) || 
        (NOT(ISNULL(OVERRIDDEN_DTE_BEGIN_EFFV__c)) &amp;&amp; OVERRIDDEN_DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c))</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date must be greater than Effective Begin Date.</errorMessage>
    </validationRules>
</CustomObject>